--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,7 @@ tqdm==4.63.0
 sanitize-filename~=1.2.0
 readchar~=3.0.4
 certifi~=2021.10.8
-selenium==4.1.3
-chromedriver_autoinstaller~=0.3.1
 nest-asyncio~=1.5.4
 asyncio~=3.4.3
 yarl~=1.7.2
+gofile-client~=1.0.0
