--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,47 @@
-aiofiles~=0.8.0
-aiohttp~=3.8.1
-certifi~=2021.10.8
-colorama~=0.4.4
-gofile-client~=1.0.0
-nest-asyncio~=1.5.4
-readchar~=3.0.4
+aiofiles==0.8.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+Automat==20.2.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+colorama==0.4.4
+constantly==15.1.0
+cryptography==36.0.2
+cssselect==1.1.0
+filelock==3.6.0
+frozenlist==1.3.0
+gofile-client==1.0.0
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+itemadapter==0.5.0
+itemloaders==1.0.4
+jmespath==1.0.0
+lxml==4.8.0
+multidict==6.0.2
+nest-asyncio==1.5.4
+parsel==1.6.0
+Protego==0.2.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyDispatcher==2.0.5
+pyOpenSSL==22.0.0
+queuelib==1.6.2
 requests==2.27.1
-sanitize-filename~=1.2.0
-Scrapy~=2.6.0
+requests-file==1.5.1
+sanitize-filename==1.2.0
+Scrapy==2.6.1
+service-identity==21.1.0
+six==1.16.0
+tldextract==3.2.0
 tqdm==4.63.0
-yarl~=1.7.2
+Twisted==22.2.0
+typing_extensions==4.1.1
+urllib3==1.26.9
+w3lib==1.22.0
+yarl==1.7.2
+zope.interface==5.4.0
