Updated .gitignore, updated scraper_helper gif functions to check if a title is provided

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ __pycache__/
 build/
 release/
 start_dev.py
+.vscode/settings.json
+
+# Scripts
+run.bat
+input.txt
+_download_log.txt
+input-test.txt
+Unsupported_Urls.txt
