--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,51 @@ input.txt
 _download_log.txt
 input-test.txt
 Unsupported_Urls.txt
+
+# My Stuff
+Downloads/*.*
+Downloads-1/*.*
+Downloads-2/*.*
+Downloads-3/*.*
+Downloads-4/*.*
+Downloads-5/*.*
+Downloads-6/*.*
+Downloads-7/*.*
+Downloads-8/*.*
+Downloads-9/*.*
+Downloads-10/*.*
+Downloads-11/*.*
+Downloads-12/*.*
+Downloads-13/*.*
+Downloads-14/*.*
+Downloads-15/*.*
+*.1
+*.2
+*.3
+*.4
+*.5
+*.6
+*.7
+*.8
+*.9
+*.10
+*.11
+*.12
+*.13
+*.14
+*.15
+*.mp4
+*.part
+URLs-Anon-1.txt
+URLs-Anon-2.txt
+URLS-Anon-List.txt
+URLs-Bunkr-1.txt
+URLs-Bunkr-2.txt
+URLs-Bunkr-List.txt
+URLs-Coomer.party-List.txt
+URLs-Coomer.party.txt
+URLs-Cyberfile.txt
+URLs-Ero-List.txt
+URLs-Ero.txt
+URLs-Thots.txt
+URLs.txt
