--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,22 @@ Downloads-12/*.*
 Downloads-13/*.*
 Downloads-14/*.*
 Downloads-15/*.*
+Downloads\*.*
+Downloads-1\*.*
+Downloads-2\*.*
+Downloads-3\*.*
+Downloads-4\*.*
+Downloads-5\*.*
+Downloads-6\*.*
+Downloads-7\*.*
+Downloads-8\*.*
+Downloads-9\*.*
+Downloads-10\*.*
+Downloads-11\*.*
+Downloads-12\*.*
+Downloads-13\*.*
+Downloads-14\*.*
+Downloads-15\*.*
 *.1
 *.2
 *.3
