--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ install_requires =
     beautifulsoup4>=4.12.2
     certifi>=2023.5.7
     myjdapi>=1.1.7
+    platformdirs>=3.8.1
     PyYAML>=6.0
     rich>=13.4.2
     setuptools>=68.0.0
